@@ -3,6 +3,18 @@
 	* configure.in:
 	Depend on gstreamer-plugins-dev 0.8.8 and nautilus-burn 2.11.1
 
+	* src/sj-structures.[ch]:
+	Added fields for the MusicBrainz identifiers.
+
+	* src/sj-metadata-musicbrainz.c:
+	Set the MusicBrainz identifiers.
+
+	* src/sj-extractor.c:
+	Write the MusicBrainz identifiers.
+
+	* src/sj-prefs.c:
+	Update for new structures.
+
 2005-05-20  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-structures.h:
